--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                   <div class="social-links">
                     <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>-->
                     <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/jayesh.pj_/" class="instagram"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bi bi-instagram"></i></a>
                     <!--<a href="#" class="google-plus"><i class="bi bi-skype"></i></a>-->
                     <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
@@ -644,7 +644,7 @@
       <div class="social-links">
       <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/jayesh.pj_/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
