--- a/index.html
+++ b/index.html
@@ -579,10 +579,10 @@
                   <h3>Social Profiles</h3>
                   <div class="social-links">
                     <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>-->
-                    <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.facebook.com/amaljizan.k" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bi bi-instagram"></i></a>
                     <!--<a href="#" class="google-plus"><i class="bi bi-skype"></i></a>-->
-                    <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://https://www.linkedin.com/in/amal-jizan-k-a552b6267/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -643,10 +643,10 @@
       <p>Thank you</p>
       <div class="social-links">
       <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.facebook.com/amaljizan.k" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/amal-jizan-k-a552b6267/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>amaljizan</span></strong>. All Rights Reserved
@@ -678,4 +678,3 @@
 </body>
 
 </html>
-
