--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Qualification:</strong> <span>+2 , Degree</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Higher Secondary Education:</strong><span>Computer Application Commerce</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Arts in Economics</span></li>
                     <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                   </ul>
