--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                     <a href="https://www.facebook.com/amaljizan.k" class="facebook"><i class="bi bi-facebook"></i></a>
                     <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bi bi-instagram"></i></a>
                     <!--<a href="#" class="google-plus"><i class="bi bi-skype"></i></a>-->
-                    <a href="https://https://www.linkedin.com/in/amal-jizan-k-a552b6267/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/amal-jizan-k-a552b6267/" class="linkedin"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
               </div>
