--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Qualification:</strong> <span>+2 , Degree</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Higher Secondary Education:</strong><span>Computer Application Commerce</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Arts in Economics</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Present:</strong> <span>Student at Vonnue</span></li>
                     <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                   </ul>
                 </div>
@@ -210,7 +211,7 @@
               <p><em></em></p>
               <p>
               <ul>
-                <li>Front-end webdevelopment using HTML5,CSS,JavaScript. </li>
+                <li>l keep LEARNING Front-end webdevelopment using HTML5,CSS,JavaScript. </li>
                 <!-- <li>Java programmer at its basic level.Made some projects like Calculator,TicTacToe Game. </li> -->
                 <!-- <li>Learned C-programming from college and its concepts and made some basic projects. </li>
                 <li>Beginner in flutter.</li> -->
