--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Qualification:</strong> <span>+2 , Degree</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Higher Secondary Education:</strong><span>Computer Application Commerce</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Arts in Economics</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Present:</strong> <span>Student at Vonnue</span></li>
                     <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                   </ul>
                 </div>
@@ -115,7 +114,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
+                <span class="skill">CSS <i class="val">75%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -143,7 +142,7 @@
               </div> -->
 
               <div class="progress">
-                <span class="skill">JavaScript <i class="val">55%</i></span>
+                <span class="skill">JavaScript <i class="val">30%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -179,7 +178,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Amal Jizan K</h4>
-              <p><em>An ambitious learner,who tends to be an Entrepreneur.Currently studied the skill of front-end webdevelopment and ready to provide the service to those who needs.</em></p>
+              <p><em>An ambitious learner,who tends to be an Entrepreneur.Currently studied the skill of front-end webdevelopment .</em></p>
               <p>
               <ul>
                 <li>SULTHAN BATHERY, WAYANAD (673592), KERALA</li>
