--- a/index.html
+++ b/index.html
@@ -581,22 +581,24 @@
                   <div class="social-links">
                     <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>-->
                     <a href="https://www.facebook.com/amaljizan.k" class="facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://wa.me/+919567050193" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
                     <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bi bi-instagram"></i></a>
                     <!--<a href="#" class="google-plus"><i class="bi bi-skype"></i></a>-->
                     <a href="https://www.linkedin.com/in/amal-jizan-k-a552b6267/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/amaljizan" class="github"><i class="bi bi-github"></i></a>
                   </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
-                  <i class="bx bx-envelope"></i>
+                  <a href="mailto:amaljizan1234@gmail.com"></a><i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                   <p>amaljizan1234gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
-                  <i class="bx bx-phone-call"></i>
+                  <a href="tel:+919567050193"></a><i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
                   <p>9567050193</p>
                 </div>
@@ -645,9 +647,11 @@
       <div class="social-links">
       <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
         <a href="https://www.facebook.com/amaljizan.k" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://wa.me/+919567050193" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
         <a href="https://www.instagram.com/___amaljizan___/?igsh=MXA1Y2JtejBuZnRkdQ%3D%3D" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
         <a href="https://www.linkedin.com/in/amal-jizan-k-a552b6267/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/amaljizan" class="github"><i class="bi bi-github"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>amaljizan</span></strong>. All Rights Reserved
