--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta property="og:image" content="https://i.ibb.co/3YYsBvqk/Whats-App-Image-2025-07-02-at-2-00-42-PM.jpg">
   <title>Amal Jizan Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
