--- a/index.html
+++ b/index.html
@@ -591,14 +591,14 @@
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
-                  <a href="mailto:amaljizan1234@gmail.com"></a><i class="bx bx-envelope"></i>
+                  <a href="mailto:amaljizan1234@gmail.com" class="mail"><i class="bx bx-envelope"></i></a>
                   <h3>Email Me</h3>
                   <p>amaljizan1234gmail.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
-                  <a href="tel:+919567050193"></a><i class="bx bx-phone-call"></i>
+                  <a href="tel:+919567050193"><i class="bx bx-phone-call"></i></a>
                   <h3>Call Me</h3>
                   <p>9567050193</p>
                 </div>
