--- a/index.html
+++ b/index.html
@@ -206,16 +206,63 @@
             <h3 class="resume-title">Skills</h3>
             <div class="resume-item">
               <h4>IT skills</h4>
-              <h5></h5>
-              <p><em></em></p>
               <p>
-              <ul>
-                <li>l keep LEARNING Front-end webdevelopment using HTML5,CSS,JavaScript. </li>
-                <!-- <li>Java programmer at its basic level.Made some projects like Calculator,TicTacToe Game. </li> -->
-                <!-- <li>Learned C-programming from college and its concepts and made some basic projects. </li>
-                <li>Beginner in flutter.</li> -->
-              </ul>
+                <ul>
+                  <li>l keep LEARNING Front-end webdevelopment using HTML5,CSS,JavaScript. </li>
+                  <!-- <li>Java programmer at its basic level.Made some projects like Calculator,TicTacToe Game. </li> -->
+                  <!-- <li>Learned C-programming from college and its concepts and made some basic projects. </li>
+                  <li>Beginner in flutter.</li> -->
+                </ul>
               </p>
+              <h5>PROJECT</h5>
+              <p>
+                <em>
+                  <div class="page-background">
+                    <a class="project-card-link" href="https://expedia-clone-amaljizans-projects.vercel.app/" target="_blank">
+                      <div class="project-card-container">
+                        <div class="project-card-header">
+                          <span class="project-card-year">2025</span>
+                          <span class="project-card-status">IN PROGRESS</span>
+                        </div>
+                        <h2 class="project-card-title">EXPEDIA-CLONE</h2>
+                        <p class="project-card-description">
+
+                          <!-- A TypeScript + React-based Amazon UI clone with modular components, routing, and responsive design.
+                          Built for frontend practice and UI replication. -->
+                        </p>
+                        <div class="project-card-tags">
+                          <span class="project-card-tag">HTML</span>
+                          <span class="project-card-tag">CSS</span>
+                          <!-- <span class="project-card-tag">TYPESCRIPT</span> -->
+                        </div>
+                      </div>
+                    </a>
+                  </div>    
+              </em>
+            </p>
+            <p>
+              <div class="page-background">
+                <a class="project-card-link" href="https://your-project-url.com" target="_blank">
+                  <div class="project-card-container">
+                    <div class="project-card-header">
+                      <span class="project-card-year">2025</span>
+                      <span class="project-card-status">IN PROGRESS</span>
+                    </div>
+                    <h2 class="project-card-title">DOORDASH-CLONE</h2>
+                    <p class="project-card-description">
+
+                      <!-- A TypeScript + React-based Amazon UI clone with modular components, routing, and responsive design.
+                      Built for frontend practice and UI replication. -->
+                    </p>
+                    <div class="project-card-tags">
+                      <span class="project-card-tag">HTML</span>
+                      <span class="project-card-tag">CSS</span>
+                      <!-- <span class="project-card-tag">TYPESCRIPT</span> -->
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </p>
             </div>
             <div class="resume-item">
               <h4>Other skills</h4>
@@ -610,7 +657,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="forms/mailto:amaljizan1234@gmail.com" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
