--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   <li>Beginner in flutter.</li> -->
                 </ul>
               </p>
-              <h5>PROJECT</h5>
+              <h5>MY PROJECT</h5>
               <p>
                 <em>
                   <div class="page-background">
@@ -222,7 +222,7 @@
                       <div class="project-card-container">
                         <div class="project-card-header">
                           <span class="project-card-year">2025</span>
-                          <span class="project-card-status">IN PROGRESS</span>
+                          <span class="project-card-status">Click to View</span>
                         </div>
                         <h2 class="project-card-title">EXPEDIA-CLONE</h2>
                         <p class="project-card-description">
@@ -246,7 +246,7 @@
                   <div class="project-card-container">
                     <div class="project-card-header">
                       <span class="project-card-year">2025</span>
-                      <span class="project-card-status">IN PROGRESS</span>
+                      <span class="project-card-status">Click to View</span>
                     </div>
                     <h2 class="project-card-title">DOORDASH-CLONE</h2>
                     <p class="project-card-description">
@@ -625,7 +625,9 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="info-box">
-                  <i class="bx bx-share-alt"></i>
+                  <button onclick="shareSite()" class="yt-share-btn">
+                    <a href="https://personal-two-pied.vercel.app/" class="facebook"></a><i class="bx bx-share-alt"></i>
+                  </button>
                   <h3>Social Profiles</h3>
                   <div class="social-links">
                     <!--<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>-->
@@ -657,7 +659,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/mailto:amaljizan1234@gmail.com" method="post" role="form" class="php-email-form">
+            <form action="mailto:amaljizan1234@gmail.com" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -727,6 +729,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
