--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   <li>Beginner in flutter.</li> -->
                 </ul>
               </p>
-              <h5>MY PROJECT</h5>
+              <h5>MY PROJECTS</h5>
               <p>
                 <em>
                   <div class="page-background">
