--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
                 <li>SULTHAN BATHERY, WAYANAD (673592), KERALA</li>
                 <li>9567050193</li>
                 <li>amaljizan1234@gmail.com</li>
+                <li>Pronouns: He/Him</li>
+
               </ul>
               </p>
             </div>
